# visual-next-token

./: .gitignore  404.html  README.md  SSL_TASK_BRAINSTORM.md  index.html  mkdocs.yml  pyproject.toml
data/: augmentations.py
development/todo/: index.html
docs/: index.md
docs/development/: todo.md
docs/getting-started/: installation.md  quickstart.md
docs/references/: index.md
docs/references/rl_navigation/: 02_random_network_distillation_RND.md  04_dinov2_visual_features.md
docs/techniques/rl_navigation/: index.md
experiments/: demo_image_walks.py  demo_walk_tokenization.py  train_rl_navigator.py  visualize_rl_paths.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
models/: resnet.py
references/: index.html
references/rl_navigation/: 01_curiosity_driven_exploration_ICM.md  03_proximal_policy_optimization_PPO.md  05_generalized_advantage_estimation_GAE.md  README.md  index.html
references/rl_navigation/01_curiosity_driven_exploration_ICM/: index.html
references/rl_navigation/02_random_network_distillation_RND/: index.html
references/rl_navigation/03_proximal_policy_optimization_PPO/: index.html
references/rl_navigation/04_dinov2_visual_features/: index.html
references/rl_navigation/05_generalized_advantage_estimation_GAE/: index.html
search/: search_index.json
techniques/dino/: __init__.py  dino.py
techniques/rl_navigation/: __init__.py  config.py  encoder.py  environment.py  extensions.py  forward_dynamics.py  index.html  policy.py  trainer.py
techniques/simclr/: simclr.py
utils/: README_TOKENIZER.md  __init__.py  image_walker.py  nd_prediction.py  superpixel_walker.py  walk_tokenizer.py
